--- a/index.html
+++ b/index.html
@@ -1,27 +1,59 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Unit 2 Starter Code, Option 1</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <h1 class="title">Title of Website</h1>
-  <div class="section">
-    <h1>Section 1</h1>
-  </div>
-  <!-- Add text, images, and links for section 1 below. -->
+  <h1 class="title">Mia Arnon</h1>
+  <img class="minds" 
+    alt="two heads, one colored a transparent red and the other colored a transparent light blue, with a drawing of their brains overlapping."
+    src="https://english.madhyamam.com/h-upload/2022/07/11/1652660-mentalhealthrgb.webp">
 
   <div class="section">
-    <h1>Section 2</h1>
+    <a href="Definition.html"> </a>
+    <button>
+      <h1>What is mental health?</h1>
+      
+    </button>
   </div>
-  <!-- Add text, images, and links for section 2 below. -->
+
+  
+  <div class="section">
+    <h1>Teenage mental health</h1>
+  </div>
+  
+  <p>
+    Many things can negatively affect teens' mental health. According to the website healthychildren.org, three main things that have large effects are academic pressure, tough schedules, and generally difficult day-to-day problems.
+  </p>
+  <p>
+    Academic pressure:
+    the overwhelming pressure to get good grades, pass every test, do every assignment well, impress colleges, and get academic validation.
+  </p>
+  <p>
+    Tough schedules:
+    long days, few breaks, many responsibilities, extracurriculars, personal concerns, and lack of sleep.
+  </p>
+  <p>
+    Difficult day-to-day problems:
+    family problems, friend problems, romantic problems, bullying, loneliness, depression, anxiety, and just life being really difficult.
+  </p>
 
   <div class="section">
-    <h1>Section 3</h1>
+    <h1>How to help with mental health struggles</h1>
   </div>
-  <!-- Add text, images, and links for section 3 below. -->
-
+  <h3>
+    There are many ways to help with teens' mental health.
+  </h3>
+  <p>
+    According to youth.gov, here are ways for schools to help teens' mental health:
+    <li>
+      
+    </li>
+  </p>
+  
 </body>
 
 </html>
