add "definition" and list

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     src="https://english.madhyamam.com/h-upload/2022/07/11/1652660-mentalhealthrgb.webp">
 
   <div class="section">
-    <a href="Definition.html"> </a>
-    <button>
+    <a href="Definition.html">
+    <button class="buttons">
       <h1>What is mental health?</h1>
-      
-    </button>
+    </button></a>
   </div>
 
   
@@ -50,7 +49,7 @@
   <p>
     According to youth.gov, here are ways for schools to help teens' mental health:
     <li>
-      
+      develop programs to provide a positive school climate
     </li>
   </p>
   
