--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
     src="https://english.madhyamam.com/h-upload/2022/07/11/1652660-mentalhealthrgb.webp">
 
   <div class="section">
-    <a href="Definition.html">
-    <button class="buttons">
       <h1>What is mental health?</h1>
-    </button></a>
   </div>
+
+  <p>The organization Substance Abuse and Mental Health Services Administration writes about mental health. According to them, mental health is "our emotional, psychological, and social well-being. It affects how we think, feel, and act, and helps determine how we handle stress, relate to others, and make choices."
+  </p>
+  <p>Source:</p>
+  <a href="https://www.samhsa.gov/mental-health">samhsa.gov</a>
 
   
   <div class="section">
     <h1>Teenage mental health</h1>
   </div>
-  
-  <p>
-    Many things can negatively affect teens' mental health. According to the website healthychildren.org, three main things that have large effects are academic pressure, tough schedules, and generally difficult day-to-day problems.
+
+  <p>Many things can negatively affect teens' mental health. According to the website healthychildren.org, three main things that have large effects are academic pressure, tough schedules, and generally difficult day-to-day problems.
   </p>
   <p>
     Academic pressure:
@@ -39,19 +40,63 @@
     Difficult day-to-day problems:
     family problems, friend problems, romantic problems, bullying, loneliness, depression, anxiety, and just life being really difficult.
   </p>
+  <p>Source:</p>
+  <a href="https://www.healthychildren.org/English/ages-stages/teen/Pages/Mental-Health-and-Teens-Watch-for-Danger-Signs.aspx">healthychildren.org</a>
+  <br>
+  <img class="stress-causes" src="https://miro.medium.com/v2/resize:fit:400/1*fD2MQO3MVInLtJSvAXEVZA.png">
 
+  <div class="section">
+    <a href="Statistics.html">
+      <button class="buttons">
+        <h1>click here to see teens' mental health statistics</h1>
+      </button>
+    </a>
+  </div>
+
+  
   <div class="section">
     <h1>How to help with mental health struggles</h1>
   </div>
-  <h3>
+  <h2>
     There are many ways to help with teens' mental health.
-  </h3>
+  </h2>
   <p>
-    According to youth.gov, here are ways for schools to help teens' mental health:
-    <li>
-      develop programs to provide a positive school climate
-    </li>
+    <h4>According to youth.gov, here are ways for schools to help teens' mental health:</h4>
+    <ul>
+      <li>develop programs to provide a positive school climate</li>
+      <li>develop services for students in need of additional support</li>
+      <li>develop programs that address the different mental health needs of their students</li>
+      <li>develop a school culture where teachers and staff can recognize mental health issues with students</li>
+    </ul>
+    <h4>What can you do to help your mental health?</h4>
+    <ul>
+      <li>make a social connection</li>
+      <li>stay active</li>
+      <li>talk to someone</li>
+      <li>take up a relaxation practice</li>
+      <li>don't cut back on sleep</li>
+      <li>reach out for help</li>
+    </ul>
+    <h4>What can you do to help a friend's mental health?</h4>
+    <ul>
+      <li>find out if the person is getting the care that they need - if not, help them get help</li>
+      <li>express your concern and support</li>
+      <li>ask questions, listen to ideas, be responsive when the topic of mental health comes up</li>
+      <li>offer to help with everyday tasks</li>
+      <li>reassure them that you care about them</li>
+    </ul>
+    <h4>How to talk about mental health:</h4>
+    <ul>
+      <li>"I've been worried about you. Can we talk?"</li>
+      <li>"What can I do to help?"</li>
+      <li>"What do you want me to know aobut how you are feeling?"</li>
+      <li>"Who or what has helped you deal with similar issues in the past?"</li>
+      <li>"How can I help you find help?"</li>
+    </ul>
+    <h2>you're not alone.</h2>
+    <h3>it will get better.</h3>
   </p>
+  <img class="heart" src="https://static.vecteezy.com/system/resources/previews/014/296/122/non_2x/simple-doodle-hand-drawn-heart-isolated-design-element-for-valentine-s-day-transparent-clipart-free-png.png">
   
 </body>
 
